# brainapi2

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose-partial.yaml  entrypoint.sh  example-docker-compose.yaml  package-lock.json  pyproject.toml
.github/workflows/: build-container.yaml  deploy.yaml  development.yaml  staging.yaml  tags.yaml
console/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
console/src/: App.tsx  index.css  main.tsx
console/src/components/: GraphCanvas.tsx  Layout.tsx
console/src/lib/: api.ts  auth.ts  graphColors.ts  graphModel.ts
console/src/pages/: DataPage.tsx  GraphPage.tsx  IngestPage.tsx  LoginPage.tsx  ObservationsPage.tsx  OverviewPage.tsx  TasksPage.tsx  VectorsPage.tsx
deploy/terraform/infra/: backend.tf  main.tf  providers.tf  user.auto.tfvars.json  variables.tf  versions.tf
mcp-stdio-http-bridge/: Cargo.toml  README.md
mcp-stdio-http-bridge/src/: bridge.rs  config.rs  lib.rs  main.rs  remote_transport.rs  stdio.rs
plugins/: readme.txt
scripts/: install_extras.py  preload_docker_models.py
src/: __init__.py  config.py  main.py
src/adapters/: __init__.py  cache.py  data.py  embeddings.py  graph.py  graph_operation_result_serializer.py  llm.py
src/adapters/interfaces/: __init__.py  cache.py  data.py  embeddings.py  graph.py  llm.py
src/constants/: __init__.py  agents.py  data.py  embeddings.py  kg.py  output_schemas.py  spacy_models.py
src/constants/prompts/: __init__.py  architect_agent.py  janitor_agent.py  kg_agent.py  misc.py  observations_agent.py  scout_agent.py
src/constants/tasks/: __init__.py  ingestion.py
src/core/: __init__.py  instances.py
src/core/agents/: __init__.py  architect_agent.py  chat_agent.py  janitor_agent.py  kg_agent.py  observations_agent.py  scout_agent.py  temporal_agent.py  validator_agent.py
src/core/backups/: __init__.py  backup_creator.py  scheduler.py
src/core/chunking/: text_chunker.py
src/core/files/: __init__.py
src/core/ingestion/: __init__.py  text_strategy.py
src/core/layers/: __init__.py
src/core/pipeline/: __init__.py  mode_strategy.py
src/core/plugins/: __init__.py  catalog.py  celery_discovery.py  cli.py  context.py  entrypoints.py  loader.py  manager.py  manifest.py  prompts.py  registry.py
src/core/saving/: __init__.py  auto_kg.py  ingestion_manager.py
src/core/search/: __init__.py  context.py  entities.py  entity_context.py  entity_info.py  entity_sibilings.py  relationships.py  traverse.py
src/lib/: __init__.py
src/lib/embeddings/: __init__.py  client.py  client_bedrock.py  client_ollama.py  client_openai.py  client_small.py  client_vertex.py  local.py
src/lib/llm/: __init__.py  client_anthropic.py  client_azure.py  client_bedrock.py  client_large.py  client_ollama.py  client_openai.py  client_small.py  client_vertex.py
src/lib/milvus/: client.py  docker-compose.yaml  readme.txt
src/lib/mongo/: client.py  docker-compose.yaml
src/lib/neo4j/: __init__.py  client.py  docker-compose.yaml
src/lib/postgresql/: __init__.py  _naming.py  _provisioning.py  data.py  docker-compose.yaml  graph_store.py  networkx.py  networkx_client.py  read_query.py  vectors.py
src/lib/qdrant/: __init__.py
src/lib/rabbitmq/: __init__.py
src/lib/redis/: __init__.py  client.py  docker-compose.yaml
src/lib/tracing/: __init__.py  events.py  middleware.py  runtime.py  subscribers.py  tracker.py  workers.py
src/services/: __init__.py
src/services/api/: app.py  console_static.py  dependencies.py  pyproject.toml
src/services/api/constants/: __init__.py  requests.py  tool_schemas.py
src/services/api/controllers/: __init__.py  changelogs.py  entities.py  kg.py  meta.py  model.py  observations.py  retrieve.py  structured_data.py  system.py  vectors.py
src/services/api/middlewares/: __init__.py  auth.py  brains.py
src/services/api/routes/: __init__.py  ingest.py  meta.py  model.py  retrieve.py  system.py  tasks.py
src/services/chat/: __init__.py
src/services/data/: __init__.py  main.py
src/services/input/: __input__.py  agents.py
src/services/kg_agent/: main.py
src/services/mcp/: __init__.py  app.py  executor.py  main.py  oauth_provider.py  openai-reverse-engineered-prompt.md  prompt.py  utils.py
src/services/observations/: __init__.py  main.py
src/services/triggers/: __init__.py  neighbourhood.py  synthetic_kg.py
src/services/webserver/: docker-compose.yaml  nginx.conf
src/utils/: __init__.py  cleanup.py  dates.py  logging.py  tokens.py  vector_search.py
src/utils/debug/: __init__.py  logtable.py
src/utils/nlp/: __init__.py  lang_detect.py  names.py  ner.py  spacy.py
src/workers/: __init__.py  app.py  celery.py  kombu_redis_patch.py
tests/: test_agent_configuration_patterns.py  test_architecture_refactors.py  test_chatbot_inference_plugin.py  test_chatbot_mcp_prompt.py  test_config_pipeline_mode_refactors.py  test_kombu_redis_patch.py  test_mcp_oauth_redis_storage.py  test_mcp_traverse_graph.py  test_plugin_refactors.py  test_postgresql_graph_read_query.py  test_reliability_refactors.py  test_spacy_fixes_verification.py  test_static_hardening_refactors.py  test_tracing_runtime_monitor.py  test_tracing_sla_tracker.py  test_tracing_workers_and_agents.py
tui/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
tui/scripts/: sync-install-extras.mjs
tui/src/: constants.ts  index.ts  types.ts
(+101 files in other folders)
