[project]
name = "brainapi2"
version = "2.0.11-dev"
description = "Version 2.x.x of the BrainAPI memory layer."
authors = [
    {name = "Christian",email = "alch.infoemail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "redis (>=6.4.0,<7.0.0)",
    "pymongo (>=4.15.3,<5.0.0)",
    "cpp-chunker (>=0.1.4,<0.2.0)",
    "neo4j (>=6.0.2,<7.0.0)",
    "pylint (>=4.0.1,<5.0.0)",
    "langchain (>=1.0.0,<2.0.0)",
    "openai (>=2.5.0,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "kombu[rabbitmq] (>=5.3.0,<6.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "langchain-core (>=1.0.0,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-openai (>=1.0.0,<2.0.0)",
    "google-genai (>=1.46.0,<2.0.0)",
    "langchain-google-vertexai (>=3.0.1,<4.0.0)",
    "pymilvus (>=2.6.2,<3.0.0)",
    "levenshtein (>=0.27.1,<0.28.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sentence-transformers (>=2.2.0,<3.0.0)",
    "tenacity (>=8.2.3,<10.0.0)",
    "sympy (>=1.12.1,<1.14.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
redis = ">=6.4.0,<7.0.0"
pymongo = ">=4.15.3,<5.0.0"
cpp-chunker = ">=0.1.4,<0.2.0"
neo4j = ">=6.0.2,<7.0.0"
pylint = ">=4.0.1,<5.0.0"
langchain = ">=1.0.0,<2.0.0"
openai = ">=2.5.0,<3.0.0"
celery = ">=5.5.3,<6.0.0"
kombu = {extras = ["rabbitmq"], version = ">=5.3.0,<6.0.0"}
fastapi = ">=0.119.0,<0.120.0"
langchain-core = ">=1.0.0,<2.0.0"
uvicorn = ">=0.38.0,<0.39.0"
python-dotenv = ">=1.1.1,<2.0.0"
langchain-openai = ">=1.0.0,<2.0.0"
google-genai = ">=1.46.0,<2.0.0"
langchain-google-vertexai = ">=3.0.1,<4.0.0"
pymilvus = ">=2.6.2,<3.0.0"
levenshtein = ">=0.27.1,<0.28.0"
pillow = ">=10.0.0,<12.0.0"
sentence-transformers = ">=2.2.0,<3.0.0"
tenacity = ">=8.2.3,<10.0.0"
python-multipart = ">=0.0.20,<0.0.21"
sympy = ">=1.12.1,<1.14.0"

[tool.pylint.messages_control]
enable = ["abstract-method"]

[tool.pylint.design]
max-args = 10
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db", "ai", "llm"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
