[package]
name = "mcp-stdio-http-bridge"
version = "0.1.0"
edition = "2021"
description = "MCP stdio <-> Streamable HTTP bridge for Claude Desktop"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
