[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "API for the BrainAPI memory layer"
authors = [{ name = "Lumen Platforms Inc." }]
license = { text = "Business Source License 1.1" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.31",
    "pydantic>=2.5",
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "build>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["../.."]
include = ["src*"]

[project.urls]
Homepage = "https://github.com/Lumen-Labs"
